<resources>
    <string name="app_name">Popular Movies App</string>

    <string name="action_settings">Settings</string>
    <string name="error_dialog_title">Oops! Sorry!</string>
    <string name="error_dialog_msg">There was an error. Please try again!</string>
    <string name="error_dialog_button">OK</string>
    <string name="poster_image_desc">Movie poster</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_sort_label">Sort Movies</string>
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_sort_default" translatable="false">popularity.desc</string>
    <string name="pref_sort_popular">popularity.desc</string>
    <string name="pref_sort_rating">vote_average.desc</string>
    <string name="pref_sort_favorite">favorite</string>

    <string-array name="pref_sort_list_titles">
        <item>Popular Movies</item>
        <item>Highest Rated</item>
        <item>Favorite Movies</item>
    </string-array>

    <string-array name="pref_sort_list_values">
        <item>@string/pref_sort_popular</item>
        <item>@string/pref_sort_rating</item>
        <item>@string/pref_sort_favorite</item>
    </string-array>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="rating_label">Rating:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="fav_text_label">Mark as Favorite</string>
    <string name="fav_button">Favorite</string>
    <string name="trailer_lable">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="play_icon_desc">playIcon</string>
    <string name="dash">-</string>
    <string name="fav_icon_desc">favIcon</string>

</resources>
