<!--
  ~ Copyright (c) 2015. Sideez Inc.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.sideez.popularmoviesapp.ui.MovieDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/material_deep_teal_500">

            <TextView
                android:id="@+id/originalTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="30dp"
                android:textColor="@android:color/white"
                android:textSize="30sp"/>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/frameLayout"
            android:layout_alignStart="@+id/frameLayout"
            android:layout_below="@+id/frameLayout"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:id="@+id/posterThumbnailImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/poster_image_desc"
                    android:src="@drawable/poster_loading"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/releaseDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_label"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/releaseDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textSize="15sp"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/ratingLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:text="@string/rating_label"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/ratingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textSize="15sp"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/favTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:text="@string/fav_text_label"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/favImageView"
                    android:src="@drawable/ic_star_border_black_24dp"
                    android:contentDescription="@string/fav_icon_desc"
                    android:clickable="false"
                    android:paddingTop="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/overviewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/trailerTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/overviewTextView"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="25dp"
            android:text="@string/trailer_lable"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <ListView
            android:id="@+id/trailersListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/trailerTextLabel"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"/>

        <TextView
            android:id="@+id/reviewsTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trailersListView"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="25dp"
            android:text="@string/reviews_label"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <ListView
            android:id="@+id/reviewsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reviewsTextLabel"
            android:headerDividersEnabled="false"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"/>
    </RelativeLayout>

</ScrollView>

